# CRUD-CLIN

./: docker-compose.yml  pyproject.toml
backend/: Dockerfile  app.py  crud.py  main.py  models.py  requirements.txt  router.py  schema.py  test_app.py
